# rust-training

./: Makefile  README.md  reading.md
basic/datatype/src/: main.rs
basic/uninitialized/src/: main.rs
error/: abort  abort.rs  abort2  abort2.rs  option  option.rs  option_and_then  option_and_then.rs  option_map  option_map.rs  option_unpacking  option_unpacking.rs
geektime/: Cargo.toml
geektime/httpie/: Cargo.toml
geektime/httpie/src/: main.rs
geektime/ownership/src/: file.rs  main.rs  max2.rs
geektime/queryer/: Cargo.toml  readme.md
geektime/queryer/src/: lib.rs
geektime/type/: writer2.rs
gk/: Cargo.toml
gk/ownership/src/: main.rs  max.rs  strtok.rs
gk/queryer/src/: lib.rs
gk/type/: self.rs  trait.rs  turbofish.rs  writer.rs
hello/: Cargo.toml
src/async/: async.rs
src/async/futures-case1/: =-8e19be59b2f7319a  =-8e19be59b2f7319a.d  =-8e19be59b2f7319a.mir  =-8e19be59b2f7319a.s  Cargo.toml  main.rs.HIR  readme.md
src/dao/: 4-20.rs  4-21.rs  5-18.rs  5-30.rs  5-31.rs  5-32.rs  5-34.rs  5-35.rs  5-38.rs
src/error/: iter_result  iter_result.rs  m_boxing_errors.rs  m_define_error_type.rs  m_error.rs  m_option_result.rs  m_question_mark.rs  m_wrap_error.rs  option.rs  option_and_then.rs  option_map.rs  option_or_else.rs  option_unpacking.rs  unwrap_or_else.rs
src/futures-example/: Cargo.toml
src/macros/: hi.rs
src/misc/: raw_identifiers.rs
src/mutex/: case1.rs
src/primitive/: semaphore.rs
src/println/: print.rs
src/proto_usage/: Cargo.toml  build.rs
src/proto_usage/protos/: voting.proto  voting.rs
src/proto_usage/src/: client.rs  main.rs  server.rs
src/re-proxy/: Cargo.toml  README.md
src/stdin/: Cargo.toml  stdin.rs
src/strings/: str1.rs
src/tokio/example/: Cargo.toml  chat.rs  connect.rs  echo.rs  hello_world.rs  readme.md  tinydb.rs  tinyhttp.rs
src/trait/: advanced.rs  dyn.rs  larget.rs
test/testa/: Cargo.toml
test/testb/: Cargo.toml
test/testc/: Cargo.toml
(+43 files in other folders)
