[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }





[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "echo"
path = "echo.rs"