[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full", "tracing"] }
tokio-util = {version = "0.7.0", features = ["full"]}
tokio-stream = { version = "0.1" }

bytes = "1.0.0"
futures = { version = "0.3.0"}

http = "0.2"
httparse = "1.0"
httpdate = "1.0"


# serde = "1.0"
# serde_derive = "1.0"
# write together
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tracing = "0.1"
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"] }

[[example]]
name = "hello_world"
path = "hello_world.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "tinyhttp"
path = "tinyhttp.rs"

[[example]]
name = "chat"
path = "chat.rs"

[[example]]
name = "tinydb"
path = "tinydb.rs"

[[example]]
name = "connect"
path = "connect.rs"

